--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -55,7 +55,7 @@ ul.mobile-nav {
   left: 10px;
   width: max-content;
   min-width: 180px;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.9);
   backdrop-filter: blur(10px);
   border-radius: 6px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
